force-app/main/default/objects/Trip_Planned__c/Trip_Planned__c.object-meta.xml
<CustomObject>
    <label>Trip Planned</label>
    <pluralLabel>Trips Planned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Trip ID</label>
        <type>AutoNumber</type>
        <displayFormat>TRP-{00000}</displayFormat>
    </nameField>
</CustomObject>