force-app/main/default/objects/Trip_Planned__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trekking</fullName>
            </value>
            <value>
                <fullName>Mountain Biking</fullName>
            </value>
            <value>
                <fullName>Beach Exploration</fullName>
            </value>
            <value>
                <fullName>River Rafting</fullName>
            </value>
            <value>
                <fullName>Camping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>