force-app/main/default/objects/Trip_Planned__c/fields/Bogo_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bogo_Customer__c</fullName>
    <label>Bogo Customer</label>
    <type>MasterDetail</type>
    <referenceTo>Bogo_Customer__c</referenceTo>
    <relationshipName>Trips_Planned</relationshipName>
    <relationshipLabel>Trips Planned</relationshipLabel>
    <reparentableMasterDetail>true</reparentableMasterDetail>
</CustomField>