force-app/main/default/objects/Trip_Planned__c/fields/Destination_Place__c.field-meta.xml
<CustomField>
    <fullName>Destination_Place__c</fullName>
    <label>Destination Place</label>
    <type>Text</type>
    <length>100</length>
</CustomField>