force-app/main/default/objects/Trip_Planned__c/fields/Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Price_Paid__c</fullName>
    <label>Price Paid</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>