force-app/main/default/objects/Trip_Planned__c/fields/Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Date__c</fullName>
    <label>Trip Date</label>
    <type>Date</type>
</CustomField>